# corp-entity-db

./: .env.example  .gitignore  CLAUDE.md  ENTITY_DATABASE.md  README.md  fix-usearch.md  next.config.ts  package.json  pnpm-lock.yaml
.claude-ignore/: settings.local.json
.claude-ignore/commands/: doc.md  publish.md  review.md  test.md
.claude/commands/: commit.md  doc.md  publish-docker.md  review.md
.claude/skills/dead-code/: SKILL.md
cerebrium/: cerebrium.toml  main.py
entity-db-lib/: README.md  pyproject.toml
entity-db-lib/src/corp_entity_db/: __init__.py  client.py  embeddings.py  hub.py  migrate_v2.py  models.py  resolver.py  schema_v2.py  seed_data.py  server.py  store.py
entity-db-lib/src/corp_entity_db/commands/: __init__.py  _common.py  imports.py  management.py  repair.py  search.py  serve.py  wikidata_dump.py
entity-db-lib/src/corp_entity_db/importers/: aliases.py  companies_house.py  companies_house_officers.py  gleif.py  sec_form4.py  wikidata.py  wikidata_dump.py  wikidata_people.py
entity-db-lib/tests/: conftest.py  test_client.py  test_embeddings.py  test_import_utils.py  test_locations_database.py  test_models.py  test_organization_database.py  test_person_database.py  test_resolver.py  test_roles_database.py  test_schema.py  test_seed_data.py  test_server.py  test_store_helpers.py  test_union_find.py
runpod/: Dockerfile  README.md  build.sh  handler.py  predownload.py  requirements.txt
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/search/: route.ts
src/app/docs/: layout.tsx  page.tsx
src/app/docs/sections/: cli.mdx  data-sources.mdx  database-schema.mdx  deployment.mdx  entity-types.mdx  examples.mdx  getting-started.mdx  python-api.mdx  server-api.mdx
src/components/: ResultCard.tsx  SearchBar.tsx  about-sections.tsx  footer.tsx  header.tsx
src/components/docs/: code-block.tsx  code-tabs.tsx  mdx-components.tsx  mermaid.tsx  table-of-contents.tsx  table.tsx
src/lib/: shiki.ts
