[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corp-entity-db"
version = "0.1.0"
description = "Entity database for organizations, people, roles, and locations with embedding search"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.6",
    "usearch>=2.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "huggingface_hub>=0.20.0",
    "pycountry>=24.6.1",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

[project.optional-dependencies]
fast-import = ["orjson", "indexed-bzip2"]

[project.scripts]
corp-entity-db = "corp_entity_db.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/corp_entity_db"]
