[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corp-entity-db"
version = "0.2.0"
description = "Entity database for organizations, people, roles, and locations with embedding search"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "sentence-transformers>=2.2.0",
    "usearch>=2.0.0",
    "huggingface_hub>=0.20.0",
    "pycountry>=24.6.1",
]

[project.optional-dependencies]
build = [
    "orjson",
    "indexed-bzip2",
]
serve = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]
client = [
    "httpx>=0.25.0",
]
all = [
    "corp-entity-db[build,serve,client]",
]

[project.scripts]
corp-entity-db = "corp_entity_db.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/corp_entity_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
